[tool.poetry]
name = "rremoteserver"
version = "0.1.0"
description = ""
authors = ["Łukasz Sójka <soyacz@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
requests = "^2.25.1"
serpent = "^1.30.2"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
